Add more gallery effects. Need full size images

--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
   <title>IBM Adobe Project</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/path/to/flickity.css" media="screen">
+  <link rel="stylesheet" href="flickity.css" media="screen">
+  
+  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script language="javascript" src="javascript.js"> </script>
+
 </head>
+
 <body>
-<div class="gallery js-flickity">
-  <div class="gallery-cell"></div>
-  <div class="gallery-cell"></div>
+
+
+<div class="main-gallery">
+  <div class="gallery-cell"><img src="Image1.png" id="bg" alt="Image1"></div>
+  <div class="gallery-cell"><img src="Image2.png" id="bg" alt="Image2"></div>
 </div>
 
-<script src="/path/to/flickity.pkgd.min.js"></script>
+<script src="flickity.pkgd.min.js"></script>
+
 </body>
 </html>
