--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -4,7 +4,7 @@
   <title>IBM Adobe Project - Enter Twitter</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="twitter.css" media="screen">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 <p> body text </p>
 <form id="enter_twitter">
   <input type="text" id="myButton" name="twitter_handle" placeholder="twitter handle">
-  <input type="submit">
+  <input type="submit" value="" name="">
 </form>
 
 <script type="text/javascript">
