add new background and adjust dot position

--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -4,7 +4,7 @@
   <title>IBM Adobe Project - Enter Twitter</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="twitter.css" media="screen">
+    <link rel="stylesheet" href="css/twitter.css" media="screen">
 </head>
 
 <body>
