--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <title>IBM Adobe Project</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="flickity.css" media="screen">
   
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize-custom.css">
+  <link rel="stylesheet" href="css/flickity.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script language="javascript" src="javascript.js"> </script>
@@ -14,13 +15,14 @@
 </head>
 
 <body>
-
-
 <div class="main-gallery">
-  <div class="gallery-cell"><img src="Image1.png" id="bg" alt="Image1"></div>
-  <div class="gallery-cell"><img src="Image2.png" id="bg" alt="Image2"></div>
+  <div class="gallery-cell"><img src="imgs/page1.jpg" class='make-it-fit' alt="Image1"></div>
+  <div class="gallery-cell"><img src="imgs/Image2.png" class='make-it-fit' alt="Image2"></div>
+  <div class="gallery-cell"><img src="imgs/Image2.png" class='make-it-fit' alt="Image3"></div>
+  <div class="gallery-cell"><img src="imgs/Image2.png" class='make-it-fit' alt="Image4">
+  	<a href="enter_twitter.html">Counter-Strike 1.6 Steam</a>
+  </div>
 </div>
-
 <script src="flickity.pkgd.min.js"></script>
 
 </body>
