add remaining background and get started button

--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
 
 <body>
 <div class="main-gallery">
-  <div class="gallery-cell"><img src="imgs/page1.jpg" class='make-it-fit' alt="Image1"></div>
-  <div class="gallery-cell"><img src="imgs/Image2.png" class='make-it-fit' alt="Image2"></div>
-  <div class="gallery-cell"><img src="imgs/Image2.png" class='make-it-fit' alt="Image3"></div>
-  <div class="gallery-cell"><img src="imgs/Image2.png" class='make-it-fit' alt="Image4">
+  <div class="gallery-cell"><img src="imgs/page1.jpg" class='make-it-fit' alt="Image1">
+  	<h2>Every customer<br>wants the brand to<br>predict their needs.</h2>
+  </div>
+  <div class="gallery-cell"><img src="imgs/Image2.jpg" class='make-it-fit' alt="Image2">
+  <h2>Traditional segmentation<br>gives you a tiny piece<br>of the puzzle.</h2>
+	</div>
+  <div class="gallery-cell"><img src="imgs/Image3.jpg" class='make-it-fit' alt="Image3">
+  <h2>Cognitive Personalization<br>lets you walk in their shoes.</h2>
+	</div>
+  <div class="gallery-cell"><img src="imgs/Image4.jpg" class='make-it-fit' alt="Image4">
+  	<h2>Imagine every customer<br>interaction was a unique<br>experience.</h2>
   	<a href="enter_twitter.html">Counter-Strike 1.6 Steam</a>
   </div>
 </div>
+
+<button id="getstarted" type="button">Get Started</button>
+
 <script src="flickity.pkgd.min.js"></script>
 
 </body>
