create more info page

--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -19,7 +19,7 @@
 
 $('#myButton').keypress(function (e) {
   if (e.which == 13) {
-  	alert('Thank you entering your twitter handle!');
+  	// alert('Thank you entering your twitter handle!');
     location.href = "words.html";
     return false;    //<---- Add this line
  	 }
