create header and add logos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+<div id="header">
+  <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="60%">
+  <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="55%">
+</div>
+
 <div class="main-gallery">
   <div class="gallery-cell"><img src="imgs/page1.jpg" class='make-it-fit' alt="Image1">
   	<h2>Every customer<br>wants the brand to<br>predict their needs.</h2>
