add back icon to header

--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -10,7 +10,7 @@
 <body>
 <div>
   <header id="header_twitter">
-
+      <img src="imgs/back.png" align="left" class="back" width="2%" height="58%">
       <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="60%">
 
       <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="55%">
@@ -28,6 +28,7 @@
 
 
     <div id="handle">
+      
         <p><strong>Get started by entering your Twitter handle</strong></p>
 
         <form id="enter_twitter" action="words.html" method="get">
