add watson logo to page

--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -29,12 +29,14 @@
 
     <div id="handle">
       
-        <p><strong>Get started by entering your Twitter handle</strong></p>
+        <p> <img src="imgs/watson.png" class="watson" width="50px" height="50px"><strong>Get started by entering your Twitter handle</strong></p>
+
 
         <form id="enter_twitter" action="words.html" method="get">
-            <input type="text" id="myButton" name="twitter_handle" placeholder="twitter handle">
+            <input type="text" id="myButton" name="twitter_handle" placeholder="@JennaArrington">
             <input type="submit" value="Submit" name="Submit">
         </form>
+
     </div>
 </div>
 
