add to latter pages

--- a/words.html
+++ b/words.html
@@ -1,3 +1,42 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>IBM Adobe Project</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  
+  <link rel="stylesheet" type="text/css" href="css/words.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script language="javascript" src="javascript.js"> </script>
+
+</head>
+
+<body>
+
 <p><a href="enter_twitter.html">Back</a></p>
-<h1> words </h1>
-<a href="more_info.html"><p> Link to More Info </p></a>
+
+<div class="profile-info-container">
+	
+    <div class="profile-image-area">
+		<div><img class="img-circle" src="imgs/profilepic.jpg" alt="girlphone"></div>
+    	<p id="line"> / </p>
+	</div>
+    
+    <div class="profile-info">
+    	<h1>Jenna Arlington (name)</h1>
+		<h2>YOUR PERSONALITY ANALYSIS</h2>
+    </div>
+
+</div>
+
+	<a href="more_info.html"><p> Link to More Info </p></a>
+
+</body>
+</html>
+
+
+
+
