save words.html file before committing

--- a/words.html
+++ b/words.html
@@ -26,13 +26,15 @@
 	</div>
     
     <div class="profile-info">
-    	<h1>Jenna Arlington (name)</h1>
-		<h2>YOUR PERSONALITY ANALYSIS</h2>
+    	<h1>Jenna Arlington</h1>
+		<h3>YOUR PERSONALITY ANALYSIS</h3>
     </div>
 
 </div>
+<div>
 
-	<a href="more_info.html"><p> Link to More Info </p></a>
+<a href="more_info.html"><button id="whatisnumber" type="button">What's the number mean?</button></a>
+</div>
 
 </body>
 </html>
