--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -10,7 +10,7 @@
 <body>
 <div>
   <header id="header_twitter">
-      <img src="imgs/back.png" align="left" class="back" width="2%" height="58%">
+      <a href="index.html"><img src="imgs/back.png" align="left" class="back" width="2%" height="58%"></a>
       <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="60%">
 
       <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="55%">
