Minor changes to images

--- a/more_info.html
+++ b/more_info.html
@@ -36,24 +36,25 @@
 
 <div class="details-container">
 
-<div>
+	<div>
 	<h2>High Conscientious</h2>
-</div>
+	</div>
 
 	<div class="summary">
-    
+    <p id="summary-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus velit. Aliquam non justo vestibulum, iaculis odio sit amet, bibendum nunc. Praesent feugiat hendrerit eros, in porta velit auctor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc blandit erat nec lacus eleifend, ut vestibulum eros consectetur. In non nunc velit. Vestibulum fermentum neque at lacus cursus imperdiet. Suspendisse massa nisl, posuere vitae quam non, semper interdum ligula. Pellentesque id augue augue. Quisque dignissim porttitor magna id volutpat.</p>
     </div>
-	<div class="imagegrid">
+	<div class="image-grid">
+    <div><img src="imgs/profilepic.jpg" alt="girlphone"></div>
     
     </div>
 	
 
 </div>
 
-
-<div>
-
-<a href="more_info.html"><button id="whatisnumber" type="button">Submit</button></a>
+<div class="email-form">
+	<div>
+	<a href="more_info.html"><button id="whatisnumber" type="button">Submit</button></a>
+	</div>
 </div>
 
 </body>
