--- a/summary.html
+++ b/summary.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   
-  <link rel="stylesheet" type="text/css" href="css/words.css">
+  <link rel="stylesheet" type="text/css" href="css/results.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script language="javascript" src="javascript.js"> </script>
@@ -16,7 +16,15 @@
 
 <body>
 
-<p><a href="enter_twitter.html">Back</a></p>
+<div>
+  <header id="header_twitter">
+      <a href="results.html"><img src="imgs/back.png" align="left" class="back" width="2%" height="52%"></a>
+      <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="53%">
+
+      <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="48%">
+
+  </header>
+</div>
 
 <div class="profile-info-container">
 	
