add notes in index.html page

--- a/index.html
+++ b/index.html
@@ -4,39 +4,61 @@
   <title>IBM Adobe Project</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="stylesheet" type="text/css" href="css/normalize-custom.css">
+
+  <!--  The Stylesheets (2 Files in Total) -->
   <link rel="stylesheet" href="css/flickity.css" media="screen">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+  <!--  Javascript Files (2 Files in Total) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script language="javascript" src="javascript.js"> </script>
 
 </head>
 
 <body>
+
+  <!-- Page Header with IBM and Adobe Logo -->
+
 <div id="header">
-  <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="45%">
-  <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="50%">
+
+    <!-- IBM Logo -->
+    <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="45%">
+    <!-- Adobe Logo -->
+    <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="50%">
+
 </div>
+
+<!-- Carousel of page 1 through 4  -->
 
 <div class="main-gallery">
-  <div class="gallery-cell"><img src="imgs/page1.jpg" class='make-it-fit' alt="Image1">
-  	<h2>Every customer<br>wants the brand to<br>predict their needs.</h2>
-  </div>
-  <div class="gallery-cell"><img src="imgs/Image2.jpg" class='make-it-fit' alt="Image2">
-  <h2>Traditional segmentation<br>gives you a tiny piece<br>of the puzzle.</h2>
-	</div>
-  <div class="gallery-cell"><img src="imgs/Image3.jpg" class='make-it-fit' alt="Image3">
-  <h2>Cognitive Personalization<br>lets you walk in their shoes.</h2>
-	</div>
-  <div class="gallery-cell"><img src="imgs/Image4.jpg" class='make-it-fit' alt="Image4">
-  	<h2>Imagine every customer<br>interaction was a unique<br>experience.</h2>
-<!--   	<a href="enter_twitter.html">Counter-Strike 1.6 Steam</a> -->
-  </div>
+
+      <!-- Page 1 -->
+      <div class="gallery-cell"><img src="imgs/page1.jpg" class='make-it-fit' alt="Image1">
+      	<h2>Every customer<br>wants the brand to<br>predict their needs.</h2>
+      </div>
+
+      <!-- Page 2 -->
+      <div class="gallery-cell"><img src="imgs/Image2.jpg" class='make-it-fit' alt="Image2">
+      <h2>Traditional segmentation<br>gives you a tiny piece<br>of the puzzle.</h2>
+    	</div>
+
+      <!-- Page 3 -->
+      <div class="gallery-cell"><img src="imgs/Image3.jpg" class='make-it-fit' alt="Image3">
+      <h2>Cognitive Personalization<br>lets you walk in their shoes.</h2>
+    	</div>
+
+      <!-- Page 4 -->
+      <div class="gallery-cell"><img src="imgs/Image4.jpg" class='make-it-fit' alt="Image4">
+      	<h2>Imagine every customer<br>interaction was a unique<br>experience.</h2>
+      </div>
+
 </div>
 
+  <!-- Button for "Get Started" Leading to Enter Twitter Page -->
+
 <a href="enter_twitter.html"><button id="getstarted" type="button">Get Started</button></a>
+
+  <!-- Link to JS file for making the Carousel Effect -->
 
 <script src="flickity.pkgd.min.js"></script>
 
