--- a/results.html
+++ b/results.html
@@ -6,9 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  
   <link rel="stylesheet" type="text/css" href="css/results.css">
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script language="javascript" src="javascript.js"> </script>
@@ -19,6 +17,8 @@
 <body>
 
 <div>
+
+<!-- Page Header with IBM and Adobe Logo -->
 
   <header>
       <a href="enter_twitter.html"><img src="imgs/back.png" align="left" class="back" width="2%" height="52%"></a>
