--- a/summary.html
+++ b/summary.html
@@ -16,15 +16,16 @@
 
 <body>
 
-<div>
-  <header id="header_twitter">
-      <a href="results.html"><img src="imgs/back.png" align="left" class="back" width="2%" height="52%"></a>
-      <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="53%">
 
-      <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="48%">
+<!-- Page Header with IBM and Adobe Logo -->
+<header id="header_twitter">
+    <a href="results.html"><img src="imgs/back.png" align="left" class="back" width="2%" height="52%"></a>
+    <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="53%">
 
-  </header>
-</div>
+    <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="48%">
+
+</header>
+
 
 <div class="profile-info-container">
 	
@@ -51,14 +52,34 @@
 	<div class="summary">
     <p id="summary-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus velit. Aliquam non justo vestibulum, iaculis odio sit amet, bibendum nunc. Praesent feugiat hendrerit eros, in porta velit auctor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc blandit erat nec lacus eleifend, ut vestibulum eros consectetur. In non nunc velit. Vestibulum fermentum neque at lacus cursus imperdiet. Suspendisse massa nisl, posuere vitae quam non, semper interdum ligula. Pellentesque id augue augue. Quisque dignissim porttitor magna id volutpat.</p>
     </div>
+
 	<div class="image-grid">
     <div><img src="imgs/profilepic.jpg" alt="girlphone"></div>
-    
-    </div>
+  </div>
+
+<!-- Isert the four images here between the <td>-->
+  <table class="pic" style="width: 100%;">
+    <tbody>
+      <!-- This is the first row of images -->
+      <tr>
+        <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
+        <td>
+        <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
+      </td>
+      </tr>
+      <!-- This is the second row of images -->
+       <tr>
+        <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
+        <td>
+        <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
+      </td>
+      </tr>
+    </tbody>
+  </table>
 	
 
 </div>
-
+<!-- form for the user to submit email-->
 <div class="email-form">
 	<div>
 	<a href="more_info.html"><button id="whatisnumber" type="button">Submit</button></a>
