--- a/summary.html
+++ b/summary.html
@@ -42,49 +42,75 @@
 </div>
 
 
+<table class="more_details">
+  <tbody>
+    <tr>
+        <!-- Left Column -->
+    <td class="left_column">
 
-<div class="details-container">
+      <h1>High Conscientious</h1>
+      <p id="summary-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus velit. Aliquam non justo vestibulum, iaculis odio sit amet, bibendum nunc. Praesent feugiat hendrerit eros, in porta velit auctor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc blandit erat nec lacus eleifend, ut vestibulum eros consectetur.</p>
+  
+    </td>
 
-	<div>
-	<h2>High Conscientious</h2>
-	</div>
-
-	<div class="summary">
-    <p id="summary-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus velit. Aliquam non justo vestibulum, iaculis odio sit amet, bibendum nunc. Praesent feugiat hendrerit eros, in porta velit auctor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc blandit erat nec lacus eleifend, ut vestibulum eros consectetur. In non nunc velit. Vestibulum fermentum neque at lacus cursus imperdiet. Suspendisse massa nisl, posuere vitae quam non, semper interdum ligula. Pellentesque id augue augue. Quisque dignissim porttitor magna id volutpat.</p>
-    </div>
-
-	<div class="image-grid">
-    <div><img src="imgs/profilepic.jpg" alt="girlphone"></div>
-  </div>
-
-<!-- Isert the four images here between the <td>-->
-  <table class="pic" style="width: 100%;">
+        <!-- Right Column -->
+    <td class="right_column">
+      <!-- Isert the four images here between the <td>-->
+  <table class="pic">
     <tbody>
       <!-- This is the first row of images -->
       <tr>
+        <!-- The first image -->
         <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
         <td>
+        <!-- The second image -->
         <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
       </td>
       </tr>
       <!-- This is the second row of images -->
        <tr>
+        <!-- The third image -->
         <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
         <td>
+        <!-- The fourth image -->
         <td><img src="imgs/profilepic.jpg" alt="" width="106" height="120" /></td>
       </td>
       </tr>
     </tbody>
   </table>
-	
+  
+    </td>
+    </tr>
+
+  </tbody>
+</table>
 
 </div>
+
+
 <!-- form for the user to submit email-->
-<div class="email-form">
-	<div>
-	<a href="more_info.html"><button id="whatisnumber" type="button">Submit</button></a>
-	</div>
-</div>
+  <div class="email-form">
+    	<div>
+    	<a href="more_info.html"><button id="whatisnumber" type="button">Submit</button></a>
+    	</div>
+  </div>
+
+
+
+
+<!-- <div class="details-container">
+
+  <div>
+  <h2>High Conscientious</h2>
+  </div>
+
+  <div class="summary">
+    <p id="summary-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus velit. Aliquam non justo vestibulum, iaculis odio sit amet, bibendum nunc. Praesent feugiat hendrerit eros, in porta velit auctor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc blandit erat nec lacus eleifend, ut vestibulum eros consectetur. In non nunc velit. Vestibulum fermentum neque at lacus cursus imperdiet. Suspendisse massa nisl, posuere vitae quam non, semper interdum ligula. Pellentesque id augue augue. Quisque dignissim porttitor magna id volutpat.</p>
+    </div>
+
+  <div class="image-grid">
+    <div><img src="imgs/profilepic.jpg" alt="girlphone"></div>
+  </div> -->
 
 </body>
 </html>
