--- a/summary.html
+++ b/summary.html
@@ -93,11 +93,33 @@
 
 
 <!-- form for the user to submit email-->
-  <div class="email-form">
+ <table class="email_form" cellpadding="0" border="0" cellspacing="0">
+    <tbody>
+      <tr>
+
+        <td class="block1">
+          <p> Recieve a copy of your Personality Insight </p>
+        </td>
+
+        <td class="block2">
+          <form id="enter_twitter" action="words.html" method="get">
+          <input type="text" id="myButton" name="email" placeholder="Enter email here">
+          <a href="results.html"><input type="submit" value="Submit"name="Submit"></a>
+          </form>
+        </td>
+
+
+      </tr>
+    </tbody>
+  </tale>
+
+
+
+<!--   <div class="email-form">
     	<div>
     	<a href="more_info.html"><button id="whatisnumber" type="button">Submit</button></a>
     	</div>
-  </div>
+  </div> -->
 
 </body>
 </html>
