add notes and clean up code

--- a/confirmation.html
+++ b/confirmation.html
@@ -4,17 +4,16 @@
   <title>IBM Adobe Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/results.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script language="javascript" src="javascript.js"> </script>
 </head>
 
 <body>
+    <!-- This is the entire image/screenshot pasted into webapge -->
     <img src="imgs/page6.png" width="100%">
-
+    <!-- this button leads back to the index/home page -->
     <div>
     <a href="index.html"><button id="home" type="button"></button></a>
     </div>
-
 </body>
 </html>
 
