--- a/results.html
+++ b/results.html
@@ -3,15 +3,10 @@
 <html>
 <head>
   <title>IBM Adobe Project</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <link rel="stylesheet" type="text/css" href="css/results.css">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script language="javascript" src="javascript.js"> </script>
-
-
 </head>
 
 <body>
@@ -29,8 +24,6 @@
 
 </div>
 
-
-
     <div class="profile-info-container">
     	
         <div class="profile-image-area">
@@ -45,11 +38,11 @@
 
     </div>
 
+    <!-- Insert the results chart somewhere here! -->
 
+    <!-- The corner button leading the the summary page -->
     <div>
-
     <a href="summary.html"><button id="whatisnumber" type="button">What's the number mean?</button></a>
-
     </div>
 
 </body>
