--- a/summary.html
+++ b/summary.html
@@ -41,21 +41,20 @@
 <table class="more_details">
   <tbody>
     <tr>
-        <!-- Left Column -->
+    <!-- Left Column -->
     <td class="left_column">
 
       <h1>High Conscientious</h1>
       <p id="summary-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus velit. Aliquam non justo vestibulum, iaculis odio sit amet, bibendum nunc. Praesent feugiat hendrerit eros, in porta velit auctor dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada. </p>
 
       <!-- The chart image goes here: -->
-
       <img src="imgs/chart2.png" alt="Chart" class="chart2" width="480" height="190" />
   
     </td>
 
-        <!-- Right Column -->
+    <!-- Right Column -->
     <td class="right_column">
-      <!-- Isert the four images here between the <td>-->
+    <!-- Isert the four images here between the <td>-->
   <table class="pic" cellpadding="0" border="0" align="center" cellspacing="0">
     <tbody>
       <!-- This is the first row of images -->
@@ -98,9 +97,9 @@
         </td>
 
         <td class="block2">
-          <form id="enter_twitter" action="lastpage.html" method="get">
+          <form id="enter_twitter" action="confirmation.html" method="get">
           <input type="text" id="myButton" name="email" placeholder="Enter email here">
-          <a href="lastpage.html"><input type="submit" value="Submit"name="Submit"></a>
+          <a href="confirmation.html"><input type="submit" value="Submit"name="Submit"></a>
           </form>
         </td>
 
@@ -115,7 +114,7 @@
 
   $('#myButton').keypress(function (e) {
         if (e.which == 13) {
-          location.href = "lastpage.html";
+          location.href = "confirmation.html";
           return false;    
       });
   });
