--- a/enter_twitter.html
+++ b/enter_twitter.html
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/twitter.css" media="screen">
     <!-- animsition.css --> 
-<link rel="stylesheet" href=
-"https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.1/css/animsition.css">
-<!-- animsition.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.1/js/animsition.js"></script>
+      <link rel="stylesheet" href=
+    "https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.1/css/animsition.css">
+  <!-- animsition.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.1/js/animsition.js"></script>
 </head>
 
 <body>
 
   <div>
+    <!--  The header -->
   <header id="header_twitter">
       <a href="index.html"><img src="imgs/back.png" align="left" class="back" width="2%" height="58%"></a>
       <img src="imgs/IBMlogo.png" align="left" class="ibm" width="14%" height="60%">
 
       <img src="imgs/AdobeLogo.png" align="right" class="adobe" width="18%" height="55%">
-
   </header>
 </div>
 
@@ -39,9 +39,10 @@
       
         <p> <img src="imgs/watson.png" class="watson" width="50px" height="50px"><strong>Get started by entering your Twitter handle</strong></p>
 
-
+        <!-- Form for entering in twitter handle -->
         <form id="enter_twitter" action="words.html" method="get">
             <input type="text" id="myButton" name="twitter_handle" placeholder="@JennaArrington">
+            <!-- This creates the JS effect of moving after submitting twitter handle -->
             <a href="results.html" class="animsition-link" data-animsition-out-class="fade-out-right"
   data-animsition-out-duration="2000" ><input type="submit" value="Submit"name="Submit"></a>
         </form>
@@ -55,7 +56,7 @@
   $(document).ready(function() {
 
 
-
+// this ensure that clicking enter will also lead to the results page
   $('#myButton').keypress(function (e) {
         if (e.which == 13) {
           // alert('Thank you entering your twitter handle!');
@@ -65,7 +66,7 @@
 
 
   });
-
+// this creates the fade in and moving animation 
   $(".animsition").animsition({
     inClass: 'fade-in',
     outClass: 'fade-out',
@@ -81,8 +82,6 @@
       '-webkit-animation-duration',
       '-o-animation-duration'
     ],
-    //"unSupportCss" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
-    //The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
     overlay : false,
     overlayClass : 'animsition-overlay-slide',
     overlayParentElement : 'body'
@@ -91,9 +90,6 @@
 });
 
   </script>
-
-
-
 
 </body>
 </html>
